--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-filter": "^3.0.1",
     "gulp-flatten": "^0.2.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
