--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "php_mysql_javascript_html5_aio_for_dummies",
+  "name": "gulp-build-jade-coffeescript-bootstrap",
   "version": "1.0.0",
   "description": "Study site based on PHP, mysql, javascript, & html5 all-in-one for dummies",
   "main": "gulpfile.js",
   "scripts": {
+    "develop": "gulp",
+    "deploy": "cross-env NODE_ENV=production gulp build && gulp deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,36 +15,28 @@
   "author": "smerth",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.7.2",
-    "browserify": "^3.46.1",
-    "gulp": "^3.9.0",
+    "bootstrap": "^4.3.1",
+    "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
-    "gulp-coffee": "^2.3.1",
-    "gulp-compass": "^2.1.0",
+    "gulp-coffee": "^3.0.3",
     "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-flatten": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-pug": "^4.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
-    "imagemin-pngcrush": "^4.1.0",
-    "lodash": "^4.0.0",
-    "main-bower-files": "^2.11.1",
+    "imagemin-pngcrush": "6.0.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "tether": "^1.1.1",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.3",
-    "vinyl-source-stream": "^1.1.0"
+    "browser-sync": "^2.26.7",
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
+    "gulp-sass": "^4.0.2"
   },
-  "dependencies": {
-    "jquery": "~> 3.4.0"
-  }
+  "dependencies": {}
 }
