--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "gulp-build-jade-coffeescript-bootstrap",
-  "version": "1.0.0",
-  "description": "Study site based on PHP, mysql, javascript, & html5 all-in-one for dummies",
+  "version": "2.0.0",
+  "description": "Use Gulp to build a development and production version of a website.",
   "main": "gulpfile.js",
   "scripts": {
     "develop": "gulp",
     "deploy": "cross-env NODE_ENV=production gulp build && gulp deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "'?'"
-  },
+  "repository": "\"https://github.com/smerth/gulp-4-site-builder-jade-coffeescript-bootstrap\"",
   "author": "smerth",
   "license": "MIT",
   "devDependencies": {
     "bootstrap": "^4.3.1",
+    "browser-sync": "^2.26.7",
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.3",
@@ -25,6 +25,7 @@
     "gulp-imagemin": "^6.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
     "imagemin-pngcrush": "6.0.0",
@@ -32,11 +33,8 @@
     "popper.js": "^1.15.0",
     "tether": "^1.1.1",
     "underscore": "^1.8.3",
-    "underscore.string": "^3.2.3",
-    "browser-sync": "^2.26.7",
-    "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
-    "gulp-sass": "^4.0.2"
+    "underscore.string": "^3.2.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "private": null
 }
