--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-build-jade-coffeescript-bootstrap",
+  "name": "gulp-4-site-builder-jade-coffeescript-bootstrap",
   "version": "2.0.0",
   "description": "Use Gulp to build a development and production version of a website.",
   "main": "gulpfile.js",
@@ -36,5 +36,5 @@
     "underscore.string": "^3.2.3"
   },
   "dependencies": {},
-  "private": null
+  "private": true
 }
