--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "gulpfile.js",
   "scripts": {
     "develop": "gulp",
-    "deploy": "cross-env NODE_DEBUG=gh-pages NODE_ENV=production gulp build && gulp deploy",
+    "build": "cross-env NODE_ENV=production gulp build",
+    "deploy": "cross-env NODE_ENV=production gulp build && gulp deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "\"https://github.com/smerth/gulp-4-site-builder-jade-coffeescript-bootstrap\"",
   "author": "smerth",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.26.7"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.6.0",
     "bootstrap": "^4.3.1",
-    "browser-sync": "^2.26.7",
     "cross-env": "^5.2.0",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.0.0",
+    "gh-pages": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.3",
@@ -24,19 +30,28 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^6.0.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-newer": "^1.4.0",
+    "gulp-noop": "^1.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
     "imagemin-pngcrush": "6.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "postcss-assets": "^5.0.0",
+    "prismjs": "^1.16.0",
     "tether": "^1.1.1",
     "underscore": "^1.8.3",
-    "underscore.string": "^3.2.3"
+    "underscore.string": "^3.2.3",
+    "usedcss": "^1.0.7"
   },
-  "dependencies": {
-    "gh-pages": "^2.0.1"
-  },
+  "browserslist": [
+    "last 2 version",
+    "> 2%"
+  ],
   "private": true
 }
